added image versioning

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,16 +21,20 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Generate version tag
+        id: version_tag
+        run: echo "::set-output name=TAG::$(date +'%Y%m%d%H%M%S')"
+
       - name: Build and test
         uses: docker/build-push-action@v5
         with:
           context: .
           load: true
-          no-cache: true  # Add this line
+          no-cache: true
 
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/${{ github.event.repository.name }}:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/${{ github.event.repository.name }}:${{ steps.version_tag.outputs.TAG }}
